--- a/naxxx.html
+++ b/naxxx.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <style>
+        p{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <p>I am Henry.
